--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
           </div>
 
-          <footer>test</footer>
+          <footer><a class="btn btn-primary" href="https://github.com/andreaswyrmmeyr/final-project" role="button">Github</a></footer>
 
         <script src="script.js"></script> 
     </body>
