--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                         <br>
                         <p>Hello I am Andreas and I am a web Developer that has a focus on C#. </p>
-                        <p>I am currently learning to make webapage using bootstrap and AJAX!</p>
+                        <p>I am currently learning to make a webapage using bootstrap and AJAX!</p>
                     </div> 
               </div>
 
